--- a/css/styles.css
+++ b/css/styles.css
@@ -21,4 +21,102 @@ nav ul {
 body {
   margin: 0;
   font-family: sans-serif;
+  display: flex;
+justify-content: center;
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1.875rem;
+  padding-bottom: 1.875rem;
+  align-items: center;
+  flex-direction: column;
+  width: 28.125rem;
+  height: 31.25rem;
+  margin-top: 9.375rem;
+  background-color: blueviolet;
+  border-radius: 1.875rem;
+}
+.length{
+  display: flex;
+  margin-right: 15.625rem;
+ 
+}
+.text{
+  margin: 0;
+}
+.range{
+  width: 12.5rem;
+  height: 0.3125rem;
+  margin-right: 1.5625rem;
+  margin-left: 1.5625rem;
+}
+.password{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 21.875rem;
+  height: 3.125rem;
+  background-color: rgb(255, 190, 255);
+  border-radius: 0.5rem;
+}
+.box2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 21.875rem;
+  height: 3.125rem;
+  background-color: rgb(255, 190, 255);
+  border-radius: 0.5rem;
+  color: black;
+}
+.box3{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  width: 21.875rem;
+  height: 3.125rem;
+ background-color: rgb(255, 190, 255);
+ border-radius: 0.5rem;
+}
+.box4{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  width: 21.875rem;
+  height: 3.125rem;
+ background-color: rgb(255, 190, 255);
+ border-radius: 0.5rem;
+}
+.box5{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  width: 21.875rem;
+  height: 3.125rem;
+  background-color: rgb(255, 190, 255);
+  border-radius: 0.5rem;
+}
+.box6{
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  width: 21.875rem;
+  height: 3.125rem;
+  background-color: rgb(255, 190, 255);
+  border-radius: 0.5rem;
+}
+.box7{
+  display: flex;
+  justify-content: center;
+  width: 21.875rem;
+  height: 3.125rem;
+  
+}
+.botoncito{
+  border-radius: 0.5rem;
+  background-color: rgb(255, 190, 255) ;
+  border: none;
+  box-shadow: purple 0.125rem 0.25rem 0.25rem;
 }
